--- a/_assets/ejs/parts/_p-model.ejs
+++ b/_assets/ejs/parts/_p-model.ejs
@@ -3,19 +3,19 @@
     <div class="p-model__inner">
       <div class="p-model__copybox">
         <p class="p-model__copy">再エネの地域共生モデル</p>
-          <img class="lazyload" src="../../img/svg/logo.svg" alt="e.cycle">         
+          <img class="lazyload" src="/img/svg/logo.svg" alt="e.cycle">         
       </div>
       <div class="p-model__cycle">
-        <img class="lazyload" src="../../img/common/cycle_1.png" alt="いいサイクル">
-        <img class="lazyload" src="../../img/common/cycle_2.png" alt="いいサイクル">
-        <img class="lazyload" src="../../img/common/cycle_3.png" alt="いいサイクル">
+        <img class="lazyload" src="/img/svg/circle_1.svg" alt="いいサイクル">
+        <img class="lazyload" src="/img/svg/circle_2.svg" alt="いいサイクル">
+        <img class="lazyload" src="/img/svg/circle_3.svg" alt="いいサイクル">
       </div>
       <div class="p-model__img">
         <% 
           for (var i = 0; i < 8; i++) { 
             var img_no = i + 1;
         %> 
-        <img class="lazyload" src="../../img/common/img-<%= img_no %>.jpg" alt=""">
+        <img class="lazyload" src="/img/common/img-<%= img_no %>.jpg" alt=""">
         <% } %>
 
       </div>
