--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -27,8 +27,10 @@
         </p>
       </div>
       <div class="p-partner__img">
-        <img class="lazyload" src="../../img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
-        <img class="lazyload" src="../../img/common/japan_2.png" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload" src="/img/svg/map_1.svg" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload" src="/img/svg/map_2.svg" alt="e.cycle千代田パートナー地域">
+        <!-- <img class="lazyload" src="/img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload" src="/img/common/japan_2.png" alt="e.cycle千代田パートナー地域"> -->
       </div>
     </div>
   </div>
