--- a/_assets/scss/object/project/_p-lead.scss
+++ b/_assets/scss/object/project/_p-lead.scss
@@ -7,7 +7,7 @@ p-lead
 .p-lead{
   padding: 10rem 0 max(18.3rem, 12.7vw);
   // padding: 10rem 0 max(18.3rem, 18.3rem);
-  background:url(../../../img/common/intro.png);
+  background:url(..//img/common/intro.png);
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -43,7 +43,7 @@ p-lead
     left: 0;
     width: 100vw;
     height: 20.8rem;
-    background:url(../../../img/common/wh.png);
+    background:url(..//img/common/wh.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
