--- a/_assets/scss/object/project/_p-step.scss
+++ b/_assets/scss/object/project/_p-step.scss
@@ -110,23 +110,23 @@ p-step
 }
 
 .p-step__contents-1::after{
-  background: url(../../img/common/1.jpg);
+  background: url(/img/common/1.jpg);
   background-size: cover;
 }
 .p-step__contents-2::after{
-  background: url(../../img/common/2.jpg);
+  background: url(/img/common/2.jpg);
   background-size: cover;
 }
 .p-step__contents-3::after{
-  background: url(../../img/common/3.jpg);
+  background: url(/img/common/3.jpg);
   background-size: cover;
 }
 .p-step__contents-4::after{
-  background: url(../../img/common/4.jpg);
+  background: url(/img/common/4.jpg);
   background-size: cover;
 }
 .p-step__contents-5::after{
-  background: url(../../img/common/5.jpg);
+  background: url(/img/common/5.jpg);
   background-size: cover;
 }
 
