--- a/_assets/scss/object/project/_p-value.scss
+++ b/_assets/scss/object/project/_p-value.scss
@@ -41,27 +41,27 @@ p-value
 }
 
 .p-value__contents-1::after{
-  background: url(../../img/common/icon-1.png);
+  background: url(/img/svg/icon_1.svg);
   background-size: cover;
 }
 
 .p-value__list-1 .p-value__contents-2::after{
-  background: url(../../img/common/icon-2.png);
+  background: url(/img/svg/icon_5.svg);
   background-size: cover;
 }
 
 .p-value__list-2 .p-value__contents-2::after{
-  background: url(../../img/common/icon-4.png);
+  background: url(/img/svg/icon_4.svg);
   background-size: cover;
 }
 
 .p-value__list-3 .p-value__contents-2::after{
-  background: url(../../img/common/icon-5.png);
+  background: url(/img/svg/icon_2.svg);
   background-size: cover;
 }
 
 .p-value__contents-3::after{
-  background: url(../../img/common/icon-3.png);
+  background: url(/img/svg/icon_3.svg);
   background-size: cover;
 }
 
