--- a/_assets/ejs/common/_header.ejs
+++ b/_assets/ejs/common/_header.ejs
@@ -19,7 +19,7 @@
   <meta property="og:local" content="ja_JP">
   <meta property="og:image" content="./img/common/og-image.jpg">
   <meta property="og:site_name" content="<%= jsonData.siteInfo.siteUrl %> ">
-  <link rel="icon" href="../../img/common/favicon.ico" />
+  <link rel="icon" href="/img/common/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
   <script src="/js/lib/b_browser_switcher.js"></script>
@@ -33,7 +33,7 @@
       <div class="p-header__inner">
         <a href="./" class="p-header__logo">
           <h1>
-            <img class="lazyload" src="../../img/common/header-logo.svg" alt="いいサイクル千代田">
+            <img class="lazyload" src="/img/common/header-logo.svg" alt="いいサイクル千代田">
           </h1>
         </a>
         <nav class="p-header__nav u-hidden-sp">
