--- a/_assets/scss/object/project/_p-mv.scss
+++ b/_assets/scss/object/project/_p-mv.scss
@@ -5,15 +5,15 @@
 p-mv
 ----------------------------------- */
 .p-mv{
-  background: url(../../../img/common/kv.jpg);
+  background: url(..//img/common/kv.jpg);
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  position: relative;
+  // position: fixed;
   @include sp{
-    background: url(../../../img/common/kv-sp.jpg);
+    background: url(..//img/common/kv-sp.jpg);
     // background-position: top;
     background-size: contain;
   }
