--- a/_assets/scss/object/project/_p-request.scss
+++ b/_assets/scss/object/project/_p-request.scss
@@ -5,7 +5,7 @@
 p-request
 ----------------------------------- */
 .p-request{
-  background: url(../../../img/common/kv_g.jpg);
+  background: url(..//img/common/kv_g.jpg);
   height: 41.667vw;
   background-repeat: no-repeat;
   background-position: top;
@@ -23,7 +23,7 @@ p-request
   position: absolute;
   bottom: 0;
   right: 0;
-  background:url(../../../img/common/japan_1.png);
+  background:url(..//img/common/japan_1.png);
   width: calc(110rem - 2.2rem) ;
   max-width: 76.389vw;
   height: 82rem;
