--- a/_assets/ejs/index.ejs
+++ b/_assets/ejs/index.ejs
@@ -6,6 +6,9 @@
 
 <main>
   <!-- MV -->
+  <%- include('./parts/_p-fixed') %>
+
+  <!-- MV -->
   <%- include('./parts/_p-mv') %>
 
   <!-- メッセージ -->
