--- a/_assets/ejs/parts/_p-request.ejs
+++ b/_assets/ejs/parts/_p-request.ejs
@@ -1,4 +1,5 @@
 <div class="l-request p-request">
+  <div class="p-request__inner"></div>
   <div class="l-inner p-request__wrapper">
     <div class="p-request__box">
       <p class="c-common-title font-color1">
