--- a/_assets/scss/object/layout/_l-request.scss
+++ b/_assets/scss/object/layout/_l-request.scss
@@ -5,6 +5,9 @@
 l-request
 ----------------------------------- */
 
-.l-request{
-  margin: 18rem 0 0;
-}
+// .l-request{
+//   margin: 18rem 0 0;
+//   @include sp{
+//     margin-top: 10rem 0 0;
+//   }
+// }
