--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -8,7 +8,9 @@ p-merit
 .p-merit{
   position: relative;
   z-index: -1;
-  background: linear-gradient($bg-color2, $bg-color6);
+  background: linear-gradient($bg-color2-op, $bg-color6-op);
+  backdrop-filter: blur(10px) brightness(70%);
+  // background: linear-gradient($bg-color2, $bg-color6);
   // padding-top: max(13rem, 30vw);
   padding-top: max(13rem, 21vw);
   padding-bottom: max(13rem, 30vw);
@@ -88,6 +90,9 @@ p-merit
   // border: none;
   // @include max(99999){
     position: relative;
+    @include sp{
+      padding-bottom: 8rem;
+    }
   // }
 }
 .p-merit__inner::before{
@@ -105,8 +110,11 @@ p-merit
     top: -39vw;
     box-sizing: border-box;
     border: none;
-    border-bottom: 1px solid #009E8C;
+    // border-bottom: 1px solid #009E8C;
   // }
+  @include sp{
+    top: -52vw;
+  }
 }
 
 .p-merit__inner::after{
@@ -124,12 +132,14 @@ p-merit
     background-repeat: no-repeat;
     bottom: -51.5vw;
     box-sizing: border-box;
-    border-top: 1px solid $border-color1;
+    // border-top: 1px solid $border-color1;
+    border: none;
   // }
   @include sp{
     // background-position:bottom;
     // background-size: cover;
-    bottom: -74.5vw;
+    // bottom: -74.5vw;
+      bottom: -55vw;
   }
 }
 .p-merit__tabarea.bottom{
