--- a/_assets/scss/object/project/_p-header.scss
+++ b/_assets/scss/object/project/_p-header.scss
@@ -10,6 +10,18 @@ p-header
   position: absolute;
   left: 0;
   top: 0;
+  animation-name:fadeInAnime1;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+  opacity:0;  
+}
+@keyframes fadeInAnime1{
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .p-header.m_fixed{
@@ -116,17 +128,34 @@ p-header
   top: 5.5rem;
   left: 1.5rem;
   width: 14.8rem;
-  background: $bg-color1;
-  border-radius: 1rem;
+  // background: $bg-color1;
+  // border-radius: 1rem;
   @include sp{
     position: relative;
     display: block;
     width: 100%;
     position: initial;
     padding: 0;
-
   }
 }
+.p-header__submenu a {
+  background: $bg-color1;
+}
+.p-header__submenu li:first-of-type a{
+  border-radius: 1rem 1rem 0 0 ;
+}
+.p-header__submenu li:last-of-type a{
+  border-radius: 0 0 1rem 1rem;
+}
+.p-header__submenu a:hover{
+  background: $bg-color6;
+  color: $font-color3-op;
+  opacity: 1;
+  // border-radius: 1rem;
+
+  // opacity: 0.7;
+}
+
 
 .p-header__submenu-have{
   @include sp{
