--- a/_assets/scss/setting/_setting.scss
+++ b/_assets/scss/setting/_setting.scss
@@ -23,6 +23,7 @@ $font-color1:#505050;
 $font-color1-op:rgba(50,50,50,0.5);
 $font-color2:#009E8C;
 $font-color3:#FFFFFF;
+$font-color3-op:rgba(255,255,255,0.3);
 $font-color4:#D8D8D8;
 $font-color5:#707070;
 $bg-color1:#FFFFFF;
@@ -31,6 +32,8 @@ $bg-color3:#E5F5F3;
 $bg-color4:#D8D8D8;
 $bg-color5:#ECECEC;
 $bg-color6:#009E8C;
+$bg-color2-op:rgba(27,157,184,0.6);
+$bg-color6-op:rgba(0,158,140,0.6);
 $bg-color7:#FFC6C6;
 $bg-color8:#505050;
 $border-color1:#009E8C;
