--- a/_assets/ejs/parts/_c-contents.ejs
+++ b/_assets/ejs/parts/_c-contents.ejs
@@ -1,4 +1,4 @@
-  <div class="<%- class_name %> <%- class_name %>-<%- contents_no %>">
+  <div class="<%- class_name %> <%- class_name %>-<%- contents_no %>  js-fadein">
     <%# タイトル %>
     <%- include('./_c-contents-title',  {contents_title: contents_title}) %>
     <%# テキスト %>  
