--- a/_assets/ejs/parts/_p-merit_tab02.ejs
+++ b/_assets/ejs/parts/_p-merit_tab02.ejs
@@ -3,12 +3,12 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <div class="p-merit__value p-value">
-      <h3 class="c-common-title font-color2">
+      <h3 class="c-common-title font-color2  js-fadein">
         地域とwin-winの関係へ！
       </h3>
       <%- include('./_p-value__list', {tab_no: 1}) %>
     </div>
-    <div class="p-merit__copy c-ecycle-copy">
+    <div class="p-merit__copy c-ecycle-copy  js-fadein">
       <div class="u-hidden-sp">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
@@ -16,7 +16,7 @@
         </p>
         <p>いい再エネを使おう！</p>
       </div>
-      <div class="u-hidden-pc">
+      <div class="u-hidden-pc js-fadein">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
           の
