--- a/_assets/ejs/parts/_p-merit_tab01.ejs
+++ b/_assets/ejs/parts/_p-merit_tab01.ejs
@@ -3,13 +3,13 @@
   <div class="p-merit__chiyoda">
     <%# メリット %>
     <div class="p-merit__value p-value">
-      <h3 class="c-common-title font-color2">
+      <h3 class="c-common-title font-color2 js-fadein">
         お得で簡単、<br class="u-hidden-pc">再エネ切替え！
       </h3>
       <%- include('./_p-value__list', {tab_no: 0}) %>
 
     </div>
-    <div class="p-value__annotation">
+    <div class="p-value__annotation  js-fadein">
       <p>
         ※1 RE100等の証明には再エネ指定の環境価値を示す証書を購入する必要があります。
       </p>
@@ -41,14 +41,14 @@
     <%# STEP %>
     <div class="p-merit__step p-step">
       <div class="p-step__titlebox">
-        <h3 class="p-step__title">
-          再エネ切替えまでの<br class="u-hidden-pc">4STEP
+        <h3 class="p-step__title js-fadein">
+          再エネ切替えまでの<br class="u-hidden-pc js-fadein">4STEP
         </h3>
       </div>
       <%- include('./_p-step__list') %>
     </div>
 
-    <div class="p-merit__copy c-ecycle-copy">
+    <div class="p-merit__copy c-ecycle-copy js-fadein">
       <div class="u-hidden-sp">
         <p>
           <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
