--- a/_assets/ejs/parts/_p-model.ejs
+++ b/_assets/ejs/parts/_p-model.ejs
@@ -1,30 +1,30 @@
 
-  <section id="ecycle" class="p-model">
-    <div class="p-model__inner">
+  <section id="ecycle" class="p-model ">
+    <div class="p-model__inner js-cycle-trigger">
       <div class="p-model__copybox">
         <p class="p-model__copy">再エネの地域共生モデル</p>
           <img class="lazyload" src="/img/svg/logo.svg" alt="e.cycle">         
       </div>
       <div class="p-model__cycle">
-        <img class="lazyload" src="/img/svg/circle_1.svg" alt="いいサイクル">
-        <img class="lazyload" src="/img/svg/circle_2.svg" alt="いいサイクル">
-        <img class="lazyload" src="/img/svg/circle_3.svg" alt="いいサイクル">
+        <img class="lazyload js-cycle" src="/img/svg/circle_1.svg" alt="いいサイクル">
+        <img class="lazyload js-cycle" src="/img/svg/circle_2.svg" alt="いいサイクル">
+        <img class="lazyload js-cycle" src="/img/svg/circle_3.svg" alt="いいサイクル">
       </div>
       <div class="p-model__img">
         <% 
           for (var i = 0; i < 8; i++) { 
             var img_no = i + 1;
         %> 
-        <img class="lazyload" src="/img/common/img-<%= img_no %>.jpg" alt=""">
+        <img class="lazyload js-imgfadein" src="/img/common/img-<%= img_no %>.jpg" alt="">
         <% } %>
 
       </div>
       <div class="p-model__textbox">
-        <h2 class="c-common-title font-color2">
+        <h2 class="c-common-title font-color2 js-fadein">
           地域と再エネ発電所の<br>
           いい循環をつくります
         </h2>
-        <p class="p-model__text">
+        <p class="p-model__text js-fadein">
           連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
         </p>
       </div>
