一次納品（blur修正）

--- a/_assets/ejs/index.ejs
+++ b/_assets/ejs/index.ejs
@@ -14,7 +14,7 @@
   <!-- メッセージ -->
   <%- include('./parts/_p-lead') %>
 
-  <!-- ご参加いただくメリット -->
+  <!-- e.CYCLE -->
   <%- include('./parts/_p-model') %>
 
   <!-- ご参加いただくメリット -->
