--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -1,5 +1,5 @@
 
-<section class="p-merit">
+<section id="p-merit" class="p-merit">
   <div class="l-inner">
     <div id="merit" class="p-merit__inner">
       <h2 class="c-common-title font-color3  js-fadein">
