--- a/_assets/ejs/common/_header.ejs
+++ b/_assets/ejs/common/_header.ejs
@@ -17,7 +17,7 @@
   <meta property="og:url" content="<%= jsonData.siteInfo.siteUrl + jsonData.pages[pageId].slug %>">
   <meta property="og:type" content="<%= jsonData.pages[pageId].type %> ">
   <meta property="og:local" content="ja_JP">
-  <meta property="og:image" content="./img/common/og-image.jpg">
+  <meta property="og:image" content="https://dev.ecycle.net/img/common/ogp.png">
   <meta property="og:site_name" content="<%= jsonData.siteInfo.siteUrl %> ">
   <link rel="icon" href="/img/common/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
