--- a/_assets/scss/object/component/_c-hamburger.scss
+++ b/_assets/scss/object/component/_c-hamburger.scss
@@ -36,7 +36,7 @@
 }
 
 .c-hamburger.open span:nth-child(2) {
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
   opacity: 0;
 }
 
@@ -59,9 +59,6 @@
 .p-header__overlay {
   @include sp{
     background-color: $bg-color1;
-    // width: 100vw;
-    // height: 51.5rem;
-    // height: 137.3vw;
     position: absolute;
     top: 0;
     left: 0;
