--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -8,10 +8,10 @@ p-merit
 .p-merit{
   position: relative;
   z-index: -1;
-  // background: linear-gradient($bg-color2, $bg-color6);
-  background: linear-gradient($bg-color2-op, $bg-color6-op);
+  // background: linear-gradient($bg-color2-op, $bg-color6-op);
   // backdrop-filter: blur(10px) brightness(70%);
-  mix-blend-mode: multiply;
+  // background: linear-gradient($bg-color2, $bg-color6);
+  // padding-top: max(13rem, 30vw);
   padding-top: max(13rem, 21vw);
   padding-bottom: max(13rem, 30vw);
   @include sp{
