--- a/_assets/ejs/parts/_p-lead.ejs
+++ b/_assets/ejs/parts/_p-lead.ejs
@@ -1,9 +1,9 @@
   <section class="p-lead">
     <div class="p-lead__inner l-inner">
-      <h2 class="p-lead__title js-fadein">
+      <h2 class="p-lead__title js fadein scroll_up">
         再エネをお得に、地域のために
       </h2>
-        <p class="p-lead__text js-fadein">
+        <p class="p-lead__text js fadein scroll_up">
           「2050ゼロカーボンちよだ」実現に向け、<br class="u-hidden-sp">
           連携自治体である秋田県五城目町、群馬県嬬恋村、岐阜県高山市の<br class="u-hidden-sp">
           再エネ発電施設を活用し、千代田区内の事業者の皆様へ<br class="u-hidden-sp">
