--- a/_assets/ejs/parts/_p-partner.ejs
+++ b/_assets/ejs/parts/_p-partner.ejs
@@ -1,11 +1,11 @@
-<div id="partner" class="l-partner p-partner ">
+<div class="l-partner p-partner ">
   <div class="l-inner js-map-trigger">
     <div class="p-partner__wrapper">
-      <div class="p-partner__textbox">
+      <div id="partner" class="p-partner__textbox">
         <div class="u-hidden-pc">
-          <div class="p-partner__copy c-ecycle-copy js-fadein">
+          <div class="p-partner__copy c-ecycle-copy js fadein scroll_up">
             <p>
-              <img class="lazyload js-fadein" src="../img/svg/logo.svg" alt="e.cycle">
+              <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
             </p>
             <p>
               千代田の
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="u-hidden-sp">
-          <div class="p-partner__copy c-ecycle-copy js-fadein">
+          <div class="p-partner__copy c-ecycle-copy js fadein scroll_up">
             <p>
               <img class="lazyload" src="../img/svg/logo.svg" alt="e.cycle">
               千代田の
@@ -22,13 +22,13 @@
             <p>パートナー地域</p>
           </div>
         </div>
-        <p class="p-partner__text js-fadein">
+        <p class="p-partner__text js fadein scroll_up">
           連携自治体の再エネ発電所の電気をまち未来製作所が集めて、電力会社に入札を行います。その売上の一部から地域活性化資金を創出し、具体的なプロジェクトを通して地域を元気にします。千代田区と連携自治体の再エネ発電所で、いい共生関係を築きます。
         </p>
       </div>
       <div class="p-partner__img">
-        <img class="lazyload js-map" src="/img/svg/map_1.svg" alt="e.cycle千代田パートナー地域">
-        <img class="lazyload js-map" src="/img/svg/map_2.svg" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload js-map scroll_up" src="/img/svg/map_1.svg" alt="e.cycle千代田パートナー地域">
+        <img class="lazyload js-map scroll_up" src="/img/svg/map_2.svg" alt="e.cycle千代田パートナー地域">
         <!-- <img class="lazyload" src="/img/common/japan_1.png" alt="e.cycle千代田パートナー地域">
         <img class="lazyload" src="/img/common/japan_2.png" alt="e.cycle千代田パートナー地域"> -->
       </div>
