--- a/_assets/ejs/parts/_p-request.ejs
+++ b/_assets/ejs/parts/_p-request.ejs
@@ -2,7 +2,7 @@
   <div class="p-request__inner"></div>
   <div class="l-inner p-request__wrapper">
     <div class="p-request__box">
-      <p class="c-common-title font-color1 js-fadein">
+      <p class="c-common-title font-color1 js fadein scroll_up">
         地域を元気にする<br class="u-hidden-pc">再エネを<br class="u-hidden-sp">お得に<br class="u-hidden-pc">使いましょう！
       </p>
       <%# ボタン %>
