--- a/_assets/ejs/parts/_c-request-btn.ejs
+++ b/_assets/ejs/parts/_c-request-btn.ejs
@@ -1,8 +1,8 @@
 <%# ボタン %>
-<%- include('./_c-modal-btn',  { id_name :"",class_name:'c-request-btn js-fadein' ,btn_text:'お申込みはこちら'}) %>
+<%- include('./_c-modal-btn',  { id_name :"",class_name:'c-request-btn js fadein scroll_up' ,btn_text:'お申込みはこちら'}) %>
 
 
-<p class="c-request-btn__annotation js-fadein">
+<p class="c-request-btn__annotation js fadein scroll_up">
   お問合せ後、担当者から<br class="u-hidden-pc">ご連絡させていただきます
 </p>
 
