--- a/_assets/ejs/parts/_p-merit.ejs
+++ b/_assets/ejs/parts/_p-merit.ejs
@@ -1,22 +1,22 @@
 
-<section id="p-merit" class="p-merit">
+<section class="p-merit">
   <div class="l-inner">
-    <div id="merit" class="p-merit__inner">
-      <h2 class="c-common-title font-color3  js-fadein">
-        ご参加いただく<br class="u-hidden-pc js-fadein">メリット
+    <div id="p-merit" class="p-merit__inner">
+      <h2 class="c-common-title font-color3  js fadein scroll_up">
+        ご参加いただく<br class="u-hidden-pc js fadein scroll_up">メリット
       </h2>
 
-      <div class="p-merit__wrapper js-fadein">
+      <div class="p-merit__wrapper js fadein scroll_up">
 
         <div class="p-merit__tabbox">
-          <ul class="p-merit__tabarea top">
-            <li class="p-merit__tab js-tab current">
+          <ul id="merit" class="p-merit__tabarea top">
+            <li data-url="#merit" class="p-merit__tab js-tab current">
               千代田区内の<br class="u-hidden-sp">事業者のみなさま
             </li>
-            <li class="p-merit__tab js-tab">
+            <li data-url="#merit" class="p-merit__tab js-tab">
               再エネ発電所の<br class="u-hidden-sp">みなさま
             </li>
-            <li class="p-merit__tab js-tab">
+            <li data-url="#merit" class="p-merit__tab js-tab">
               小売電気事業者の<br class="u-hidden-sp">みなさま
             </li>
           </ul>
@@ -46,10 +46,6 @@
           </ul>
         </div>
       </div>
-
-
-
-
     </div>
   </div>
 </section>
