--- a/_assets/ejs/parts/_p-modal.ejs
+++ b/_assets/ejs/parts/_p-modal.ejs
@@ -1,49 +1,50 @@
 <div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
   <div class="modal-overlay" tabindex="-1" data-micromodal-close>
-    <div
+    <div class="modal-wrapper">
+      <div
       class="modal-container"
       role="dialog"
       aria-modal="true"
       aria-labelledby="modal-1-title"
-    >
-      <header class="modal-header">
-        <h2 class="modal-title" id="modal-1-title">ご参加のお申込み</h2>
-      </header>
-      <div class="modal-content" id="modal-1-content">
-        <ul class="modal-list">
-          <li class="modal-button">
-            <a href="https://forms.zohopublic.jp/goodaround/form/Untitled3/formperma/l7kL21Ik8twAMOeHCLe2J-yzrXbhMiG6bzozCSqHN1o" target="_blank">
-            千代田区内の<br>
-            事業者のみなさま</a>
-          </li>
-          <li class="modal-button">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTP1Z4U0Gx78zxqvJDPuVaflfFbNnTa6L7atup3-DNM7x10Q/viewform?usp=sf_link" target="_blank">
-            再エネ発電所の<br>
+      >
+        <header class="modal-header">
+          <h2 class="modal-title" id="modal-1-title">ご参加のお申込み</h2>
+        </header>
+        <div class="modal-content" id="modal-1-content">
+          <ul class="modal-list">
+            <li class="modal-button">
+              <a href="https://forms.zohopublic.jp/goodaround/form/Untitled3/formperma/l7kL21Ik8twAMOeHCLe2J-yzrXbhMiG6bzozCSqHN1o" target="_blank">
+              千代田区内の<br>
+              事業者のみなさま</a>
+            </li>
+            <li class="modal-button">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTP1Z4U0Gx78zxqvJDPuVaflfFbNnTa6L7atup3-DNM7x10Q/viewform?usp=sf_link" target="_blank">
+              再エネ発電所の<br>
+                みなさま
+                </a>
+            </li>
+            <li class="modal-button">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-zaYTPvyCKtKTJ2o-qo87dujl9e7cMpIo7KjvIYd0VCK3sQ/viewform?usp=sf_link
+              " target="_blank">
+              小売電気事業者の<br>
               みなさま
               </a>
-          </li>
-          <li class="modal-button">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-zaYTPvyCKtKTJ2o-qo87dujl9e7cMpIo7KjvIYd0VCK3sQ/viewform?usp=sf_link
-            " target="_blank">
-            小売電気事業者の<br>
-            みなさま
-            </a>
-          </li>
-        </ul>
-        <a class="modal-etc" href="https://docs.google.com/forms/d/e/1FAIpQLScbi_FP5x7CM2CKQKM25m66zs4QpGnS1RqPDy1OpSnWULYtJQ/viewform
-        " target="_blank">その他お問合せはこちら</a>
+            </li>
+          </ul>
+          <a class="modal-etc" href="https://docs.google.com/forms/d/e/1FAIpQLScbi_FP5x7CM2CKQKM25m66zs4QpGnS1RqPDy1OpSnWULYtJQ/viewform
+          " target="_blank">その他お問合せはこちら</a>
 
-        <div class="modal-closebox">
-          <p class="modal-close-text">閉じる</p>
-          <button
-            class="modal-close"
-            aria-label="Close modal"
-            data-micromodal-close
-          >
-        </button>
+          <div class="modal-closebox">
+            <p class="modal-close-text">閉じる</p>
+            <button
+              class="modal-close"
+              aria-label="Close modal"
+              data-micromodal-close
+            >
+          </button>
+          </div>
         </div>
-        </div>
-
+      </div>
     </div>
   </div>
 </div>
