--- a/_assets/scss/object/component/_c-ecycle-copy.scss
+++ b/_assets/scss/object/component/_c-ecycle-copy.scss
@@ -7,6 +7,7 @@ c-ecycle-copy
 
 .c-ecycle-copy{
   font-size: 3.6rem;
+  font-weight: 700;
   color: $font-color2;
   @include sp{
     font-size: 3.5rem;
