--- a/_assets/scss/object/project/_p-lead.scss
+++ b/_assets/scss/object/project/_p-lead.scss
@@ -8,15 +8,18 @@ p-lead
   padding: 10rem 0 max(18.3rem, 12.7vw);
   // padding: 10rem 0 max(18.3rem, 18.3rem);
   background:url(..//img/common/intro.png);
-  background-size: cover;
+  // background-size: cover;
+  background-size: 100% max(100%, 79.4rem);
   background-position: bottom;
   background-repeat: no-repeat;
+  text-shadow: 0 0 2rem $font-color2;
   
   @include sp{
     padding: 6rem 0 max(18.3rem, 12.7vw);
     background-size: contain;
     background: $bg-color7;
     position: relative;
+    background-size: 100% min(100%, 78.5rem);
   }
 }
 
