--- a/_assets/scss/object/project/_p-merit.scss
+++ b/_assets/scss/object/project/_p-merit.scss
@@ -8,31 +8,12 @@ p-merit
 .p-merit{
   position: relative;
   z-index: -1;
-  // background: linear-gradient($bg-color2-op, $bg-color6-op);
-  // backdrop-filter: blur(10px) brightness(70%);
-  // background: linear-gradient($bg-color2, $bg-color6);
-  // padding-top: max(13rem, 30vw);
   padding-top: max(13rem, 21vw);
   padding-bottom: max(13rem, 30vw);
   @include sp{
     padding-bottom: min(21rem,40vw);
   }
 }
-// .p-merit::before{
-//   @include sp{
-//     content: "";
-//     top: -10px;
-//     left: 0;
-//     position: absolute;
-//     width: 100vw;
-//     height: 12rem;
-//     transform: scale(1, -1);
-//     background:url(..//img/common/wh.png);
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     background-position: top;
-//   }
-// }
 
 .p-merit__contentbox{
   width: 62rem;
@@ -87,8 +68,6 @@ p-merit
   }
 }
 .p-merit__inner{
-  // border: none;
-  // @include max(99999){
     position: relative;
     @include sp{
       padding-bottom: 8rem;
@@ -96,7 +75,6 @@ p-merit
   // }
 }
 .p-merit__inner::before{
-  // @include max(9999){
     content: "";
     background: url(..//img/common/white-top.png);
     position: absolute;
@@ -110,8 +88,6 @@ p-merit
     top: -39vw;
     box-sizing: border-box;
     border: none;
-    // border-bottom: 1px solid #009E8C;
-  // }
   @include sp{
     // top: -52vw;
     top: -50vw;
@@ -143,7 +119,8 @@ p-merit
 }
 .p-merit__tabarea.bottom{
   @include sp{
-    padding: 1.3rem 2rem 0;
+    padding: 2rem 2rem 0;
+    border-top: 2px solid $border-color2;
   }
 }
 
@@ -213,7 +190,7 @@ p-merit
   @include sp{
     color: $font-color3;
     background: $bg-color6;
-    border: none;
+    border: 1px solid $bg-color6;
   }
 }
 
@@ -270,7 +247,7 @@ opacity: 1;
   background: $bg-color1;
   padding: 8rem 2rem;
   @include sp{
-    padding: 4rem 2rem;
+    padding: 4rem 2rem 3.3rem;
   }
 }
 
