--- a/_assets/scss/object/project/_p-model.scss
+++ b/_assets/scss/object/project/_p-model.scss
@@ -78,18 +78,27 @@ p-model
   width: 59.2rem;
   max-width: 100%;
   height: 59.2rem;
+  z-index: 1;
   @include sp{
     height: 29.5rem;
     width: 29.5rem;
   }
 }
 
+// .p-model__cycle-img{
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+// }
+
 .p-model__cycle img{
   position: absolute;
   top: 50%;
   left: 50%;
   width: 100%;
-  transform: translate(-50%, -50%);
+  height: inherit;
+  // height: 100%;
+  transform: translate(-50%, 0);
   // opacity: 0;
 }
 
